--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.6",
-    "@mui/material": "^5.14.6",
+    "@mui/joy": "^5.0.0-beta.4",
+    "@mui/lab": "^5.0.0-alpha.142",
+    "@mui/material": "^5.14.7",
     "@mui/material-next": "^6.0.0-alpha.99",
     "@mui/styled-engine-sc": "^5.14.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +19,7 @@
     "material-ui-popup-state": "^5.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
