--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^5.14.7",
     "@mui/material-next": "^6.0.0-alpha.99",
     "@mui/styled-engine-sc": "^5.14.6",
+    "@refinedev/cli": "^2.9.0",
+    "@refinedev/mui": "^5.13.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +24,7 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
@@ -29,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "refine": "refine"
   },
   "eslintConfig": {
     "extends": [
