--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "sass": "^1.70.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
