--- a/package.json
+++ b/package.json
@@ -3,24 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.6",
-    "@mui/joy": "^5.0.0-beta.4",
-    "@mui/lab": "^5.0.0-alpha.142",
-    "@mui/material": "^5.14.7",
-    "@mui/material-next": "^6.0.0-alpha.99",
-    "@mui/styled-engine-sc": "^5.14.6",
+    "@react-oauth/google": "^0.12.1",
     "@refinedev/cli": "^2.9.0",
     "@refinedev/mui": "^5.13.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "material-ui-popup-state": "^5.0.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.45.4",
     "react-loadable": "^5.5.0",
     "react-promise-tracker": "^2.1.1",
