--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@react-oauth/google": "^0.12.1",
     "@refinedev/cli": "^2.9.0",
     "@refinedev/mui": "^5.13.4",
+    "axios": "^1.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.45.4",
     "react-loadable": "^5.5.0",
     "react-promise-tracker": "^2.1.1",
